--- a/brainminer/ui/index.html
+++ b/brainminer/ui/index.html
@@ -1,5 +1,33 @@
 <html>
-    <body>
-        <h1>Hello, world!</h1>
+
+    <head>
+
+        <title>BrainMiner</title>
+
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
+        <link rel="stylesheet" type="text/css" href="css/app.css"/>
+
+    </head>
+
+    <body ng-app="brainminer" ng-controller="main">
+
+        <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-route.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-resource.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-cookies.min.js"></script>
+
+        <script src="js/app.js"></script>
+        <script src="js/controllers/main.js"></script>
+        <script src="js/controllers/login.js"></script>
+        <script src="js/controllers/logout.js"></script>
+        <script src="js/services/token.js"></script>
+        <script src="js/services/user.js"></script>
+
     </body>
+
 </html>
