--- a/brainminer/ui/index.html
+++ b/brainminer/ui/index.html
@@ -10,9 +10,11 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
         <link rel="stylesheet" type="text/css" href="css/app.css"/>
 
+        <script src="js/environ.js"></script>
+
     </head>
 
-    <body ng-app="brainminer" ng-controller="main">
+    <body ng-app="app" ng-controller="main">
 
         <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
@@ -22,11 +24,15 @@
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-cookies.min.js"></script>
 
         <script src="js/app.js"></script>
+        <script src="js/controllers/admin.js"></script>
+        <script src="js/controllers/dashboard.js"></script>
         <script src="js/controllers/main.js"></script>
         <script src="js/controllers/login.js"></script>
         <script src="js/controllers/logout.js"></script>
         <script src="js/services/token.js"></script>
         <script src="js/services/user.js"></script>
+
+        <div ng-view></div>
 
     </body>
 
