Implemented repository management pages

--- a/brainminer/ui/index.html
+++ b/brainminer/ui/index.html
@@ -26,9 +26,11 @@
         <script src="js/app.js"></script>
         <script src="js/controllers/admin.js"></script>
         <script src="js/controllers/dashboard.js"></script>
-        <script src="js/controllers/main.js"></script>
         <script src="js/controllers/login.js"></script>
         <script src="js/controllers/logout.js"></script>
+        <script src="js/controllers/main.js"></script>
+        <script src="js/controllers/repository.js"></script>
+        <script src="js/services/repository.js"></script>
         <script src="js/services/token.js"></script>
         <script src="js/services/user.js"></script>
 
