Cleaned up code a bit, non-admin users can also login now

--- a/brainminer/ui/index.html
+++ b/brainminer/ui/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
         <link rel="stylesheet" type="text/css" href="css/app.css"/>
 
-        <script src="js/environ.js"></script>
+        <script src="js/settings.js"></script>
 
     </head>
 
@@ -30,6 +30,7 @@
         <script src="js/controllers/logout.js"></script>
         <script src="js/controllers/main.js"></script>
         <script src="js/controllers/repository.js"></script>
+        <script src="js/controllers/user.js"></script>
         <script src="js/services/repository.js"></script>
         <script src="js/services/token.js"></script>
         <script src="js/services/user.js"></script>
