--- a/brainminer/ui/index.html
+++ b/brainminer/ui/index.html
@@ -23,14 +23,21 @@
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-resource.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-cookies.min.js"></script>
 
+        <script src="js/lib/upload/ng-file-upload-shim.min.js"></script>
+        <script src="js/lib/upload/ng-file-upload.js"></script>
+
         <script src="js/app.js"></script>
         <script src="js/controllers/admin.js"></script>
         <script src="js/controllers/dashboard.js"></script>
+        <script src="js/controllers/file.js"></script>
         <script src="js/controllers/login.js"></script>
         <script src="js/controllers/logout.js"></script>
         <script src="js/controllers/main.js"></script>
         <script src="js/controllers/repository.js"></script>
         <script src="js/controllers/user.js"></script>
+
+        <script src="js/services/file.js"></script>
+        <script src="js/services/file-set.js"></script>
         <script src="js/services/repository.js"></script>
         <script src="js/services/token.js"></script>
         <script src="js/services/user.js"></script>
